# corners-devils-and-heroes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  extensions.cmake
resources/: DefaultShaderProgram.shader
scripts/bats/: CleanUp.bat  RebuildDebug.bat  RebuildRelease.bat
src/: undef_gl_macros.h  utilities.h
src/Application/: GraphicApplication.cpp  GraphicApplication.hpp  GraphicApplicationRenderFrame.cpp  GraphicApplicationRenderFrame.hpp  main.cpp
src/Controllers/: Game.cpp  Game.hpp  HumanPawnController.hpp  HumanPlayer.hpp  Player.cpp  Player.hpp
src/Controllers/AIPlayer/: AIPlayer.hpp  StyledAIPlayer.hpp
src/Controllers/AIPlayer/AI/: AIAlgorithm.hpp  AIBoardSituation.cpp  AIBoardSituation.hpp  AIPawnActionAlternative.cpp  AIPawnActionAlternative.hpp  AIPawnProxy.cpp  AIPawnProxy.hpp
src/Controllers/AIPlayer/AI/DescisionMaking/: AlternativeSelector.cpp  AlternativeSelector.hpp  Minimax.hpp  Minimax.inl
src/Controllers/AIPlayer/AI/Pathfinding/: BoardGraph.cpp  BoardGraph.hpp  Pathfinder.hpp  Pathfinder.inl  position2d.hpp
src/Graphics/: Drawable.hpp  GraphicAssetCache.cpp  GraphicAssetCache.hpp  GraphicTypes.cpp  GraphicTypes.hpp  QuadBatchMeshRenderer.cpp  QuadBatchMeshRenderer.hpp  ShaderProgram.hpp
src/Models/: Board.cpp  Board.hpp  GameRules.hpp  Pawn.cpp  Pawn.hpp
src/Views/: AnimatedPawnView.hpp  BasicPlayerPawnStyle.hpp  BoardVisualGrid.hpp  DefaultBoardVisualGrid.hpp  DefaultGameView.hpp  GameScreen.hpp  GameView.hpp  PawnView.hpp  PlayerPawnStyle.hpp  TiledBoardView.hpp  UI.hpp
src/Window/: RenderWindow.cpp  RenderWindow.hpp
